--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "^20.19.0",
     "node.js": "^0.0.1-security",
     "pg": "^8.14.1",
-    "querystring": "^0.2.1"
+    "querystring": "^0.2.1",
+    "uuid": "^11.1.0"
   }
 }
